--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -44,13 +44,13 @@
                                     <div class="modal-content">
                                         <div class="modal-body">
                                             <div class="download-modal-row row">
-                                                <div class="col-md-6 text-center" (click)="downloadTrialBalanceExcelFile()">
+                                                <div class="col-md-6 text-center" style="cursor: pointer;"(click)="downloadTrialBalanceExcelFile()">
                                                     <img src="../../../../assets/img/download.png">
 
 
                                                     <p>{{"Download Trial Balance" |localize}}</p>
                                                 </div>
-                                                <div class="col-md-6 text-center" (click)="downloadExcelFile()">
+                                                <div class="col-md-6 text-center" style="cursor: pointer;" (click)="downloadExcelFile()">
                                                     <img src="../../../../assets/img/download.png">
                                                     <p>{{"Download Chart of Accounts" | localize}}</p>
                                                 </div>
