--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -91,39 +91,62 @@
                                 <div class="kt-widget3 ">
                                     <div *ngFor="let i of historyOfTask" class="kt-widget3__item ">
                                         <div class="comments-header kt-widget3__header">
-                                            <div class="kt-widget3__user-img">
-                                                <div *ngIf="i.result.ChangeOccurUser.picture" class="kt-badge kt-badge--xl">
+                                            <!-- <div class="kt-widget3__user-img">
+                                                <div *ngIf="i.result.ChangeOccurUser.profilePicture" class="kt-badge kt-badge--xl">
                                                     <img class="header-profile-picture m--img-rounded m--marginless m--img-centered"
                                                         alt="Pic" [src]="UserProfilePicture">
                                                 </div>
 
-                                                <div *ngIf="!i.result.ChangeOccurUser.picture" class="kt-user-card-v2__pic">
+                                                <div *ngIf="!i.result.ChangeOccurUser.profilePicture" class="kt-user-card-v2__pic">
                                                     <div class="kt-badge kt-badge--xl kt-badge--warning">
-                                                        {{i.result.ChangeOccurUser.name | firstLetterOfWords}}
+                                                       
                                                     </div>
                                                 </div>
+                                            </div> -->
+
+                                            <div class="kt-user-card-v2__pic">
+                                                <!-- <div *ngIf="i.result.ChangeOccurUser.profilePicture" class="kt-badge kt-badge--xl">
+                                                    <img class="header-profile-picture m--img-rounded m--marginless m--img-centered"
+                                                        alt="Pic" [src]="i.result.ChangeOccurUser.profilePicture">
+                                                </div> -->
+
+                                                <div
+                                                    class="kt-badge kt-badge--xl kt-badge--primary">
+                                                    {{i.result.ChangeOccurUser.name | firstLetterOfWords}}
+                                                </div>
                                             </div>
+
                                             <div class="kt-widget3__info">
                                                 <a class="kt-widget3__username">
                                                     {{i.result.ChangeOccurUser.name}}
                                                 </a><br>
                                             </div>
                                             <span class="kt-widget3__status kt-font-info">
-                                                qwerty
+                                                {{i.changeTime | momentFormat:' YYYY-MMMM-DD HH:mm:ss'}}
                                             </span>
                                         </div>
                                          <div *ngIf="i.propertyName == 'AssigneeId'" class="kt-widget3__body show-comments-inner">
                                             <p class="kt-widget3__text commentViewBox">
-                                               {{i.result.ChangeOccurUser.name}} change the Assignee
+                                               {{i.result.ChangeOccurUser.name}} change the Assignee                                               
                                             </p>
+                                            
                                         </div>
 
                                         <div *ngIf="i.propertyName == 'Status'" class="kt-widget3__body show-comments-inner">
                                            
-                                                <span class="kt-list-timeline__badge"></span>
-                                                <span  class="kt-widget3__text commentViewBox"> {{i.result.ChangeOccurUser.name}} change the Status 
-                                                <span class="kt-badge kt-badge--brand kt-badge--inline"> {{i.result.PreviousValue}}</span>
-                                                <span class="kt-badge kt-badge--brand kt-badge--inline"> {{i.result.NewValue}}</span></span>
+
+                                                <div class="col-md-3 pt-3">
+                                                    <span class="">{{i.result.ChangeOccurUser.name}} Changed the Status</span>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <button class="btn btn-primary text-white px-5">
+                                                        {{i.result.PreviousValue}}
+                                                    </button>
+                                                    <i class="fas fa-arrow-right py-2 mx-3" style="size:30px;"></i>
+                                                    <button class="btn btn-primary text-white px-5">
+                                                        {{i.result.NewValue}}
+                                                    </button>
+                                                </div>
                                         </div> 
 
                                     </div>
