History UI Fixed

--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -132,7 +132,7 @@
                                             
                                         </div>
 
-                                        <div *ngIf="i.propertyName == 'Status'" class="kt-widget3__body show-comments-inner">
+                                        <div *ngIf="i.propertyName == 'Status'" class="kt-widget3__body show-comments-inner"style="width:100%">
                                            
 
                                                 <div class="col-md-3 pt-3">
