--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -344,7 +344,7 @@
                                             <td class="text-blue"  >{{trialBalanceNet | formater}}</td>
                                         </tr>
                                         <tr>
-                                            <td class="text-navyblue">{{"Varience" | localize}}:</td>
+                                            <td class="text-navyblue">{{"Variance" | localize}}:</td>
                                             <td class="text-blue" > {{varianceBeginning | formater}}</td>
                                             <td class="text-blue" > {{varianceAccured | formater}}</td>
                                             <td class="text-blue" > {{varianceNet | formater}}</td>
