--- a/angular/src/app/admin/users/users.component.html
+++ b/angular/src/app/admin/users/users.component.html
@@ -348,7 +348,7 @@
                                         <li class="kt-nav__item">
                                             <a class="kt-nav__link">
                                                 <i class="kt-nav__link-icon flaticon2-send"></i>
-                                                <span (click)="editUserPermissionsModal.show(item.id, item.userName)" class="kt-nav__link-text">Premission</span>
+                                                <span (click)="editUserPermissionsModal.show(item.id, item.userName)" class="kt-nav__link-text">Permission</span>
                                             </a>
                                         </li>
                                     </ul>
