--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
@@ -161,7 +161,7 @@
                                             <div class="form-group margin-top-5">
                                                 <button [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')" class="btn btn-brand" type="submit">
                                                     <i class="fa fa-save"></i>
-                                                    <span>{{buttonTitle}}</span>{{buttonTitle}}
+                                                    <span>{{buttonTitle}}</span>
                                                 </button>
                                             </div>
                                         </form>
