closingChecklist grid sorting issue fixed

--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -150,7 +150,7 @@
                                     [resizableColumns]="primengTableHelper.resizableColumns">
                                     <ng-template pTemplate="header">
                                         <tr class="task-table-inner">
-                                            <th class="date-cell" scope="col" pSortableColumn="ClosingMonth">
+                                            <th class="date-cell" scope="col" pSortableColumn="DueDate">
                                                 {{'DueDate' | localize}}
                                                 <p-sortIcon field="DueDate"></p-sortIcon>
                                             </th>
