account reconcilled and history in closing checklist.

--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -305,7 +305,7 @@
                                 </div>
                             </div>
                             <div class="Check-reconcile-btn ">
-                                <button class="btn btn-brand" >{{"Check as Reconciled" | localize}}</button>
+                                <button (click)="reconciledClick()" class="btn btn-brand" >{{"Check as Reconciled" | localize}}</button>
                             </div>
                         </div>
                     </div>
