--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -33,7 +33,7 @@
                                             <label for="TaskName"> {{"Account No" | localize}}.</label>
                                             <input type="text" name="accountNumber" (focusout)="CheckAccountNumber()" class="form-control"
                                                 [(ngModel)]="accountDto.accountNumber" autocomplete="off">
-                                                <span style="color:red" *ngIf="isAccountExist">{{"Account number already exist." | localize}}</span>   
+                                                <span style="color:red" *ngIf="isAccountExist">{{"Account Number already exists" | localize}}</span>   
                                         </div>
                                     </div>
                                 </div>
