--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -353,7 +353,7 @@
                                 </table>
                             </div>
                             <div class="Check-reconcile-btn">
-                                <button class="btn btn-brand" >{{"Check as Reconciled" | localize}}</button>
+                                <button (click)="reconciledClick()" class="btn btn-brand" >{{"Check as Reconciled" | localize}}</button>
                             </div>
                         </div>
                     </div>
