drop dwon error fix

--- a/angular/src/app/main/checklist/user-list-component/user-list-component.component.css
+++ b/angular/src/app/main/checklist/user-list-component/user-list-component.component.css
@@ -10,6 +10,12 @@
 
 }
 
+body {
+    position: relative;
+}
+::ng-deep ng-dropdown-panel {
+    transition: opacity 0.1s linear;
+}
 .imagedropdown{
     width:25px;
      height:25px;
